fixing how the generic user icon renders (no background color so that the parent background color is visible). also adjusting the background color slightly.

--- a/src/Components/Common/PageHeader/PageHeader.less
+++ b/src/Components/Common/PageHeader/PageHeader.less
@@ -47,11 +47,17 @@
     .PageHeader-navUser {
       .PageHeader-menuTitle {
         border-radius: 50%;
-        background-color: #ddd;
+        background-color: #dfdfdf;
         overflow: hidden;
 
         &:hover {
           background-color: #ccc;
+        }
+
+        .ProfilePicture {
+          .fa {
+            background-color: transparent;
+          }
         }
       }
     }
